Modificado algunos metadatos de la aplicacion web, del package.json y para el soporte PWA
Tanto en el nuxt.config.js y en el package.json se hicieron modificaciones en los metadatos como el de la descripcion de la aplicacion, tambien en el apartado para las configuraciones PWA. Y tambien, algunos saltos de lineas y comentarios innecesarios.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app-de-notas",
   "version": "1.0.0",
   "author": "Brayan Duran Velasquez",
-  "description": "App de notas, con operaciones basicas CRUD",
+  "description": "Una aplicacion para guardar sus notas.",
   "private": true,
   "scripts": {
     "dev": "nuxt",
