Agregado al proyecto el paquete push-dir
Facilita hacer deploy a GitHub Pages

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "start": "nuxt start",
     "export": "nuxt export",
     "serve": "nuxt serve",
-    "generate": "nuxt build && nuxt export"
+    "generate": "nuxt build && nuxt export",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "alertifyjs": "^1.13.1",
     "nuxt": "^2.13.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "push-dir": "^0.4.1"
+  }
 }
