agregado paquete node-sass y sass-loader
La aplicacion ya contaba con archivos SCSS y en sus componentes, igual. Pero, no estaba agregado como dependencia en el package.json

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "nuxt": "^2.13.0"
   },
   "devDependencies": {
-    "push-dir": "^0.4.1"
+    "node-sass": "^4.14.1",
+    "push-dir": "^0.4.1",
+    "sass-loader": "^8.0.2"
   }
 }
